# gpt2_from_scratch

./: .gitignore  pyproject.toml  test.ipynb
config/: config.py
main/: data_download.py  data_loader.py  data_preprocess.py  train_gpt.py
models/: attention.py  mlp.py  transformer.py
