[project]
name = "gpt2-from-scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "chautuankien",email = "105159083+chautuankien@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "transformers (>=4.53.2,<5.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
